tests/parsing/base_type_with_argument_list/stderr.golden
error: base type 'mask' does not accept argument list
bus.fbd +1:18
   |
 1 | type my_mask mask(A=2)
   |                  ^^^^^
